--- a/index.html
+++ b/index.html
@@ -94,36 +94,30 @@
 				</div>				
 				<div class="row">
 					<div class="row justify-content-center align-items-center ">
-						<div class="col-1"></div>
-						<div class="col-05"></div>
-						<div class="col-3 justify-content-center align-items-center">
+						<div class="col-2 justify-content-center align-items-center">
+							<p class="row  justify-content-center align-items-bottom text-secondary">GDP</p>
 							<div id="happiness_gdp_scatter"	 class=" overflow-auto"></div>
 						</div>
-						<div class="col-3 justify-content-center align-items-center">
+						<div class="col-2 justify-content-center align-items-center">
+							<p class="row  justify-content-center align-items-bottom text-secondary">Social</p>
 							<div id="happiness_social_scatter"		 class=" overflow-auto"></div>
 						</div>
-						<div class="col-3 justify-content-center align-items-center">
+						<div class="col-2 justify-content-center align-items-center">
+							<p class="row  justify-content-center align-items-bottom text-secondary">Health</p>
 							<div id="happiness_health_scatter" 		 class=" overflow-auto"></div>
 						</div>
-						<div class="col-05"></div>
-						<div class="col-1"></div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="row justify-content-center align-items-center ">
-						<div class="col-05"></div>
-						<div class="col-1"></div>
-						<div class="col-3 justify-content-center align-items-center">
+						<div class="col-2 justify-content-center align-items-center">
+							<p class="row  justify-content-center align-items-bottom text-secondary">Freedom</p>
 							<div id="happiness_freedom_scatter" 	 class=" overflow-auto"></div>
 						</div>
-						<div class="col-3 justify-content-center align-items-center">
+						<div class="col-2 justify-content-center align-items-center">
+							<p class="row  justify-content-center align-items-bottom text-secondary">Generosity</p>
 							<div id="happiness_generosity_scatter" 	 class=" overflow-auto"></div>
 						</div>
-						<div class="col-3 justify-content-center align-items-center">
+						<div class="col-2 justify-content-center align-items-center">
+							<p class="row  justify-content-center align-items-bottom text-secondary">Corruption</p>
 							<div id="happiness_corruption_scatter"	 class=" overflow-auto"></div>
 						</div>
-						<div class="col-1"></div>
-						<div class="col-05"></div>
 					</div>
 				</div>
 				<div class="row justify-content-center">
