--- a/index.html
+++ b/index.html
@@ -87,8 +87,32 @@
 						</div>
 						<div class="col-05"></div>
 					</div>
+					<div class="row justify-content-center align-items-center ">
+						<div class="col-1"></div>
+						<div class="col-3 justify-content-center align-items-center">
+						  <div class="text-center">
+							<h2 class="text-primary">Western Europe</h2>
+							<div id="happy_region" class=" overflow-auto"></div>
+							<div><i style="font-size:0.7vw">Hover over countries for more details.</i></div>
+						  </div>
+						</div>
+						<div class="col-4 justify-content-center align-items-center">
+						  <div class="text-center">
+							<p class="text-secondary">Western Europe is the happiest region in the world. Five Nordic countries are special mention – Finland, Denmark, Norway, Sweden, and Iceland – have all been in the top ten.</p>
+							<p class="text-secondary">Sub-Saharan Africa is the not-so-happy region in the world. There are no African countries are in the first one third; in other words, none of the 54 countries in Africa are in the category of the happiest countries globally.</p>
+						  </div>
+						</div>
+						<div class="col-3 justify-content-center align-items-center">
+						  <div class="text-center">
+							<h2 class="text-primary">Sub-Saharan Africa</h2>
+							<div id="not_happy_region" class=" overflow-auto"></div>
+							<div><i style="font-size:0.7vw">Hover over countries for more details.</i></div>
+						  </div>
+						</div>
+						<div class="col-1"></div>
+					</div>					
 					<div class="row justify-content-center">
-						<p>Select Region: </p>
+						<p>Select Region for specific details: </p>
 						<select id="overviewRegionDropDown" onchange="onOverviewRegionSelect()">
 							<option value="World">World</option>
 							<option value="Australia and New Zealand">Australia and New Zealand</option>
@@ -216,6 +240,13 @@
 							<p class="row  justify-content-center align-items-bottom text-primary">Percentage Changes in Happiness from 2015 to 2019</p>
 							<div id="happiness_change_scatter" class=" overflow-auto"></div>
 							<div><i style="font-size:0.7vw">Hover over circles (% Happiness Change) for more details.</i></div>
+						</div>
+						<div class="col-2"></div>
+					</div>
+					<div class="row justify-content-center align-items-center ">
+						<div class="col-2"></div>
+						<div class="col-8 justify-content-center align-items-center">
+							<p class="text-secondary">Among the top 10 gainers 7 (Benin, Togo, Ivory Coast, Burundi, Burkina Faso, Guinea, Gabon) are in Sub-Saharan Africa. Also among top 10 losers 5 (Lesotho, Malawi, Zimbabwe, Zambia, Botswana) are from Sub-Saharan Africa. The appearance of Sub-Saharan African countries among the biggest gainers and the biggest losers, according to the report, reflects the variety and volatility of experiences among the countries.</p>
 						</div>
 						<div class="col-2"></div>
 					</div>
